test/spec_vectors/simd_f64x2_arith/fail/module_4.wat
(module (func (result v128) (f64x2.add (i64.const 0) (f64.const 0.0))))